sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__db__test__attempt_to_create_db_during_migration.snap
---
source: sqlanywhere-server/src/schema/db.rs
expression: "register_shared(&meta_store, \"ns\", \"schema\").await.unwrap_err()"
---
PendingMigrationOnSchema(
    schema,
)
