sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__db__test__enqueue_migration_job-2.snap
---
source: sqlanywhere-server/src/schema/db.rs
expression: rows.next().unwrap().unwrap()
---
{
    Ok(
        "task_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "job_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "target_namespace",
    ): (
        Text,
        "ns1",
    ),
    Ok(
        "status",
    ): (
        Integer,
        0,
    ),
    Ok(
        "error",
    ): (
        Null,
        (),
    ),
    Ok(
        "finished",
    ): (
        Integer,
        0,
    ),
}
