sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__db__test__enqueue_migration_job.snap
---
source: sqlanywhere-server/src/schema/db.rs
expression: stmt.query(()).unwrap().next().unwrap().unwrap()
---
{
    Ok(
        "job_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "schema",
    ): (
        Text,
        "schema1",
    ),
    Ok(
        "migration",
    ): (
        Text,
        "{\"steps\":[{\"cond\":null,\"query\":{\"stmt\":{\"stmt\":\"select * from test\",\"kind\":\"Read\",\"is_iud\":false,\"is_insert\":false,\"attach_info\":null},\"params\":{\"Positional\":[]},\"want_rows\":true}}]}",
    ),
    Ok(
        "status",
    ): (
        Integer,
        0,
    ),
    Ok(
        "error",
    ): (
        Null,
        (),
    ),
    Ok(
        "finished",
    ): (
        Integer,
        0,
    ),
}
