sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__db__test__pending_job-2.snap
---
source: sqlanywhere-server/src/schema/db.rs
expression: tasks
---
[
    MigrationTask {
        namespace: ns1,
        status: Enqueued,
        job_id: 1,
        task_id: 1,
    },
    MigrationTask {
        namespace: ns2,
        status: Enqueued,
        job_id: 1,
        task_id: 2,
    },
    MigrationTask {
        namespace: ns3,
        status: Enqueued,
        job_id: 1,
        task_id: 3,
    },
]
