sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__db__test__pending_job-3.snap
---
source: sqlanywhere-server/src/schema/db.rs
expression: get_next_pending_migration_job(&mut conn).unwrap().unwrap()
---
MigrationJob {
    schema: schema1,
    status: WaitingDryRun,
    job_id: 1,
    migration: Program {
        steps: [
            Step {
                cond: None,
                query: Query {
                    stmt: Statement {
                        stmt: "create table test (x)",
                        kind: DDL,
                        is_iud: false,
                        is_insert: false,
                        attach_info: None,
                    },
                    params: Positional(
                        [],
                    ),
                    want_rows: true,
                },
            },
        ],
    },
    progress: [
        2,
        0,
        0,
        0,
        1,
        0,
    ],
    task_error: None,
    disable_foreign_key: false,
}
